--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,11 @@
   <version>0.1.0.1</version>
   <name>Archetype - seMethods</name>
   <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>3.6.4</version>
+    </dependency>
+  </dependencies>
 </project>
